# ChromiumBuilder

./: .gitignore  .replit  README.md  build-ultimate-chromium.sh  install-dependencies.sh  pyproject.toml  replit.md
config/: merged-args.gn
patches/: apply-clang-optimizations.py  apply-ungoogled-patches.py
utils/: setup-toolchain.sh  verify-optimizations.sh
