# Ultimate Chromium Build Configuration
# Merges ungoogled-chromium privacy settings with Chromium Clang optimizations
# Target: Windows 64-bit AVX512

# =============================================================================
# BASIC BUILD CONFIGURATION
# =============================================================================
is_official_build = true
is_debug = false
is_component_build = false
target_os = "win"
target_cpu = "x64"

# Symbol configuration for optimized builds
symbol_level = 0
blink_symbol_level = 0
v8_symbol_level = 0

# =============================================================================
# UNGOOGLED-CHROMIUM PRIVACY SETTINGS
# =============================================================================

# Disable Google services integration
enable_google_apis = false
enable_mdns = false
enable_service_discovery = false
enable_hangout_services_extension = false
enable_widevine = false
use_official_google_api_keys = false

# Privacy enhancements
enable_reporting = false
enable_nacl = false
safe_browsing_mode = 0
enable_plugins = false
enable_plugin_installation = false

# Disable telemetry and metrics
enable_crash_reporter = false
enable_crashpad = false
use_crash_key_stubs = true
enable_error_reporting = false

# Network privacy
enable_webrtc = false
rtc_use_pipewire = false
rtc_link_pipewire = false

# Media privacy
proprietary_codecs = false
ffmpeg_branding = "Chromium"
enable_hevc_parser_and_hw_decoder = false

# Extensions and web store
enable_extensions = true
enable_extension_assets_sharing = false

# PDF and printing
enable_pdf = true
enable_print_preview = true
enable_basic_print_dialog = false

# =============================================================================
# CHROMIUM CLANG PERFORMANCE OPTIMIZATIONS  
# =============================================================================

# Link Time Optimization (comprehensive)
use_thin_lto = true
use_lld = true
thin_lto_enable_optimizations = true
use_text_section_splitting = true

# Profile Guided Optimization
chrome_pgo_phase = 2
pgo_data_path = ""

# V8 JavaScript engine optimizations
v8_enable_builtins_optimization = true
v8_enable_fast_torque = true
v8_enable_turbofan = true
v8_optimized_debug = false
v8_enable_object_print = false
v8_enable_verify_heap = false
v8_enable_verify_csa = false

# Polly high-level optimizations
use_polly = true

# Custom Clang configuration
is_clang = true
clang_use_chrome_plugins = false
clang_base_path = "//third_party/llvm-build/Release+Asserts"

# =============================================================================
# AVX512 AND VECTORIZATION OPTIMIZATIONS
# =============================================================================

# Target architecture optimizations
target_cpu = "x64"

# Custom compiler flags for AVX512
common_optimize_on_cflags = [
  "-O3",
  "-march=skylake-avx512", 
  "-mtune=skylake-avx512",
  "-mavx512f",
  "-mavx512cd", 
  "-mavx512vl",
  "-mavx512bw",
  "-mavx512dq",
  "-mfma",
  "-mfpmath=sse",
]

# Fast-math optimizations for hot code paths
common_optimize_on_cflags += [
  "-ffast-math",
  "-funsafe-math-optimizations", 
  "-ffinite-math-only",
  "-fno-signed-zeros",
  "-fno-trapping-math",
  "-fassociative-math",
  "-freciprocal-math",
]

# Additional vectorization flags
common_optimize_on_cflags += [
  "-ftree-vectorize",
  "-ftree-slp-vectorize", 
  "-fvectorize",
  "-fslp-vectorize",
]

# =============================================================================
# ADVANCED LINKER OPTIMIZATIONS
# =============================================================================

# Use LLD linker with optimizations
use_lld = true

# Linker optimization flags
common_optimize_on_ldflags = [
  "-fuse-ld=lld",
  "-Wl,--lto-O3",
  "-Wl,--icf=all",
  "-Wl,--gc-sections", 
  "-Wl,--strip-all",
]

# BOLT binary optimization (post-link)
# Note: BOLT requires separate post-processing step
use_bolt = false  # Set to true if BOLT tools available

# =============================================================================
# WINDOWS CROSS-COMPILATION SETTINGS
# =============================================================================

# Windows toolchain
visual_studio_version = "2022"
windows_sdk_version = "10.0.22000.0"

# Cross-compilation target  
target_os = "win"
target_cpu = "x64"
is_win = true

# Windows-specific optimizations
win_console_app = false
optimize_for_size = false

# =============================================================================
# BUILD SYSTEM OPTIMIZATIONS
# =============================================================================

# Ninja build optimizations
concurrent_links = 1  # Adjust based on available RAM

# Compiler cache
use_goma = false
use_remoteexec = false

# Build performance
enable_precompiled_headers = true
jumbo_build_excluded = []

# =============================================================================
# SECURITY AND SANDBOXING
# =============================================================================

# Maintain security while optimizing
is_component_build = false
enable_nacl = false

# Sandbox configuration
# Note: Preserving essential security features despite optimizations

# =============================================================================
# FEATURE FLAGS AND TOGGLES
# =============================================================================

# Enable useful features while maintaining privacy
enable_extensions = true
enable_plugins = false
enable_pdf = true
enable_print_preview = true

# Disable unnecessary features for performance
enable_service_discovery = false
enable_mdns = false
enable_hangout_services_extension = false

# Media optimizations
proprietary_codecs = false
ffmpeg_branding = "Chromium"

# =============================================================================
# CUSTOM PATCHES INTEGRATION
# =============================================================================

# Domain substitution (applied via patches)
# Pruning list (applied via patches) 
# Inox patchset (applied via patches)
# V8 optimizations (applied via patches)

# Custom build identification
chrome_version_extra = "-ultimate-avx512"
